<resources>
    <string name="app_name">Memoryzer</string>
    <string name="new_quiz">New Quiz</string>
    <string name="default_set">Default</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="answer_hint">Your answer</string>
    <string name="question_placeholder">Question text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="finish">Finish</string>
    <string name="correct">Correct !</string>
    <string name="wrong">Wrong answer</string>
    <string name="create_set">Create New Set</string>
    <string name="create_new_set">Create New Set</string>
    <string name="set_name">Set Name</string>
    <string name="add_question">Add Question</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="add">Add</string>
    <string name="save_set">Save Set</string>
    <string name="remove">Remove</string>
</resources>